--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>
-		</title>
+		<meta charset="utf-8">
+		<title>Enigma</title>
+		<script type="text/javascript" src="enigma.js"></script>
+		<link rel="stylesheet" type="text/css" href="enigma.css">
 	</head>
 	<body>
+		<p id="debug">placa</p>
+		<div id="keyboard"></div>
+		<p id="text"></p>
+		<div id="plugboard"></div>
+		<div id="lightboard"></div>
 	</body>
 </html>
