--- a/enigma.html
+++ b/enigma.html
@@ -7,9 +7,18 @@
 		<link rel="stylesheet" type="text/css" href="enigma.css">
 	</head>
 	<body>
-		<p id="debug">placa</p>
-		<div id="keyboard"></div>
-		<p id="text"></p>
+
+		<p id="static-wheel"></p>
+		<p id="reflector-wheel"></p>
+		<p id="wheel-order"></p>
+		<p id="ring-setting"></p>
+		<p id="start-position"></p>
+		<p id="plugboard-text"></p>
+
+		<input id="message"></div>
+		<div id="keyboard">
+
+		</div>
 		<div id="plugboard"></div>
 		<div id="lightboard"></div>
 	</body>
